--- a/backend-minesweeper/package.json
+++ b/backend-minesweeper/package.json
@@ -9,7 +9,7 @@
     "clean": "rm build.zip",
     "build": "zip -r build.zip node_modules index.js app.js routes.js",
     "dynamodb-local-run": "docker-compose up",
-    "create-database": "aws dynamodb create-table --cli-input-json file://games-table-model.json --endpoint-url http://localhost:8080",
+    "create-database": "aws dynamodb create-table --cli-input-json file://games-table-model.json --endpoint-url http://localhost:8080 && aws dynamodb create-table --cli-input-json file://tableDef/users-table-model.json --endpoint-url http://localhost:8080 ",
     "start": "node app-local"
   },
   "repository": {
@@ -31,8 +31,13 @@
   "dependencies": {
     "aws-sdk": "^2.889.0",
     "aws-serverless-express": "^3.4.0",
+    "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "serverless-express": "^2.0.11",
     "serverless-http": "^2.7.0",
     "uuid": "^8.3.2"
