--- a/front-minesweeper-aws/package.json
+++ b/front-minesweeper-aws/package.json
@@ -15,6 +15,7 @@
     "next": "10.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.3.0",
     "swr": "^0.5.5"
   }
 }
