Backend refactoring, eliminating old code

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ backend-minesweeper/.serverless
 backend-minesweeper/node_modules
 backend-minesweeper/serverless.yml
 backend-minesweeper/.env
+front-minesweeper-aws/node_modules
+backend-minesweeper/build.zip
